--- a/100daysR2_7-8-19/SVG.js/index.html
+++ b/100daysR2_7-8-19/SVG.js/index.html
@@ -8,7 +8,7 @@
     <style>
       body {
         padding: 0;
-        margin: 200px;
+        margin: 0px;
         display: flex;
         flex-wrap: wrap;
       }
@@ -17,31 +17,40 @@
         background-color: orange;
         min-width: 400px;
         min-height: 400px;
-        margin: 20px;
+        margin: 100px 200px;
       }
-      path, circle, rect {
-        fill: white;
+      symbol {
+        fill: red;
+        stroke-width: 2px;
+      }
+      circle {
+        fill: pink;
       }
     </style>
   </head>
 
   <body>
     <svg viewbox="0 0  400px 400px" width="400px" height="400px">
-        <switch>
-            <text y='50px' x='50px'  systemLanguage="ar">مرحبا</text>
-            <text y='50px' x='50px'  systemLanguage="en">Hello!</text>
-            <text y='50px' x='50px'  systemLanguage="en-gb">Wotcha!</text>
-            <text y='50px' x='50px'  systemLanguage="de,nl">Hallo!</text>  
-            <text y='50px' x='50px'  systemLanguage="en-us">Howdy!</text>
-            <text y='50px' x='50px'  systemLanguage="en-au">G'day!</text>
-            <text y='50px' x='50px'  systemLanguage="es">Hola!</text>
-            <text y='50px' x='50px'  systemLanguage="fr">Bonjour!</text>
-            <text y='50px' x='50px'  systemLanguage="ja">こんにちは</text>
-            <text y='50px' x='50px'  systemLanguage="ru">Привет!</text>
-            <text y='50px' x='50px' >☺</text>
-         </switch>
-    </svg>
+      <!-- <defs> -->
+        <pattern
+          id="pattern1"
+          x="10"
+          y="10"
+          width="20"
+          height="20"
+          patternUnits="userSpaceOnUse"
+        >
+          <circle cx="10" cy="10" r="10" style="stroke: none; fill: pink" />
+        </pattern>
+      <!-- </defs> -->
 
+      <rect
+        x="100"
+        y="10"
+        width="100"
+        height="100"
+        style="stroke: #fff; fill: url(#pattern1);"
+      />
     </svg>
   </body>
 </html>
